# grammatic

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .tmuxp.yaml  AGENTS.md  CONCEPT.md  README.md  devenv.nix  justfile  pyproject.toml
.devman/.config/: config.json
.roadmap/: master-roadmap.md  phase-1-foundation.md  phase-2-build-system.md  phase-3-logging.md  phase-4-core-justfile.md  phase-5-parse-test.md  phase-6-queries.md  phase-7-developer-ux.md
.skills/treesitter-grammar-dev/: SKILL.md
docs/migration/: python-orchestration.md
scripts/: build_grammar.py  build_grammar.sh  grammar_doctor.py  log_writer.py  new_grammar.sh  query_logs.py
scripts/just/: path_checks.just  path_checks.py  path_checks.sh
skills/grammar-workshop/: SKILL.md
skills/query-workshop/: SKILL.md
src/grammatic/: __init__.py  contracts.py  errors.py  event_logs.py  logs.py  models.py  preflight.py  workspace.py
src/grammatic/cli/: __init__.py  __main__.py
src/grammatic/workflows/: __init__.py  build.py  common.py  doctor.py  generate.py  grammar_tests.py  parse.py
tests/: test_build_script.py  test_developer_ux.py  test_full_workflow.py  test_imports.py  test_log_writer.py  test_logs_repo.py  test_models.py  test_parse.py  test_queries.py  test_subprocess_error_visibility.py  test_workspace_models.py
tests/fixtures/: sample_parse.json  sample_parse_with_errors.json  sample_python.py
tests/fixtures/minimal_grammar/: grammar.js
tests/fixtures/scanner_grammar/: grammar.js
tests/fixtures/scanner_grammar/src/: scanner.c
(+1 files in other folders)
